# convo

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  JSON-ENVELOPE.md  NOTICE  README.md  RELEASING.md  SECURITY.md  justfile  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: post-edit-python.sh  post-edit-semgrep.sh  post-edit-sql.sh  pre-bash-block-py-writes.sh
.github/: PULL_REQUEST_TEMPLATE.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  cut-release.yml  plugin-install.yml  release-cut.yml  release.yml  scorecard.yml
.semgrep/: test-quality.yml
commands/: diff.md  info.md  inspect.md  projects.md  search.md  sessions.md  stats.md  summary.md  tools.md
hooks/: hooks.json
scripts/: validate_plugin_manifest.py
skills/convo-search/: SKILL.md
skills/convo-summary/: SKILL.md
skills/searching-conversation-history/: SKILL.md
src/convo/: __init__.py  __main__.py  cli.py  cli_errors.py  db.py  legacy_migrate.py
src/convo/analytics/: __init__.py  _constants.py  diff.py  stats_commands.py  stats_files.py  stats_hooks.py  stats_model.py  stats_sessions.py  stats_tools.py  summary.py
src/convo/intake/: __init__.py  guard.py  mapper.py  orchestrator.py  parser.py  records.py  signature.py
src/convo/migrations/: 0001_init.sql  0002_guard_decisions.sql  __init__.py
src/convo/read/: __init__.py  _db_access.py  filters.py  info.py  inspect.py  projects.py  prose.py  search.py  sessions.py  snapshots.py  suggestions.py  tools.py
tests/: _seed.py  conftest.py  test_cli_backup.py  test_cli_diff.py  test_cli_errors.py  test_cli_index.py  test_cli_info.py  test_cli_inspect.py  test_cli_migrate_legacy.py  test_cli_restore.py  test_cli_restore_latest.py  test_cli_search.py  test_cli_snapshots.py  test_cli_stats.py  test_cli_summary.py  test_conftest_fixtures.py  test_db_backup.py  test_db_backup_units.py  test_db_migrate.py  test_db_open.py  test_db_path_resolution.py  test_db_restore_units.py  test_db_schema.py  test_db_snapshots.py  test_diff.py  test_envelope_v2.py  test_fts_messages.py  test_fts_tool_calls.py  test_fts_tool_results.py  test_fts_trigram.py  test_inspect_timeline.py  test_intake_guard.py  test_intake_mapper.py  test_intake_orchestrator.py  test_intake_orchestrator_units.py  test_intake_parser.py  test_intake_tree.py  test_legacy_migrate_e2e.py  test_legacy_migrate_marker.py  test_legacy_migrate_paths.py  (+27 more)
tests/fixtures/: __init__.py  legacy_minimal_seed.py
tests/fixtures/qa-projects/test-slug/: sample.jsonl
tests/perf/: test_excerpt_perf.py
