[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convo"
version = "0.1.0.dev0"
description = "Global conversation index and query tool for Claude Code. Tool-call analytics, anti-pattern detection, session inspection."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Anthony Ledesma" }]
keywords = [
    "claude-code",
    "agent-observability",
    "tool-call-analytics",
    "llm-tooling",
    "anti-pattern-detection",
    "sqlite",
    "fts5",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Logging",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/TracineHQ/convo"
Repository = "https://github.com/TracineHQ/convo"
Issues = "https://github.com/TracineHQ/convo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/convo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["src/convo"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true
