[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convo"
version = "0.1.0"
description = "Global conversation index and query tool for Claude Code. Tool-call analytics, anti-pattern detection, session inspection."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.12"
authors = [{ name = "Anthony Ledesma" }]
keywords = [
    "claude-code",
    "agent-observability",
    "tool-call-analytics",
    "llm-tooling",
    "anti-pattern-detection",
    "sqlite",
    "fts5",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Logging",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/TracineHQ/convo"
Repository = "https://github.com/TracineHQ/convo"
Issues = "https://github.com/TracineHQ/convo/issues"

[project.scripts]
convo = "convo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/convo"]

# Explicit mapping for SQL migration files. Hatchling does not include
# non-Python data files inside packages by default; force-include guarantees
# they ship in the wheel. When you add 0002_*.sql, append it here.
[tool.hatch.build.targets.wheel.force-include]
"src/convo/migrations/0001_init.sql" = "convo/migrations/0001_init.sql"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["src/convo"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["bench/results"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Conflicts with formatter
    "COM812", "ISC001",
    # We are not writing a library that needs full docstring coverage on every dunder.
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",
    # `assert` is fine in tests; pytest uses it.
    "S101",
    # `print` is allowed in CLI entry points.
    "T201",
    # `from __future__ import annotations` is unnecessary on 3.12+ where
    # PEP 604 unions and PEP 695 type params work at runtime. We do not require
    # the import; we enforce modern syntax via UP rules and target-version.
    "FA100", "FA102",
    # ANN401 (`Any` in type hints) is too aggressive for adapters. We allow it sparingly.
    "ANN401",
    # Pandas-specific rules; this is not a pandas project.
    "PD",
    # NumPy-specific rules; this is not a numpy project.
    "NPY",
    # Allow `TODO` comments; we track work in CHANGELOG and issues, not blocked by lint.
    "TD002", "TD003", "FIX002",
    # `typing.Self` rules conflict with explicit annotations we prefer.
    "PYI034",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    # Tests do not require full docstrings or strict type annotations on every fixture.
    "D",
    "ANN",
    # `assert` and magic numbers are fine in tests.
    "PLR2004",
    # Allow private member access in tests.
    "SLF001",
    # Test seed helpers commonly take many keyword args.
    "PLR0913",
    # /tmp paths in tests are data fixtures, not real filesystem targets.
    "S108",
]
"bench/**" = [
    # Bench scripts are exploratory; relax the rules we apply to library code.
    "D", "ANN", "PLR2004", "T201",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
no_implicit_reexport = true
files = ["src/convo", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
# Tests can be looser; the source must be strict.
disallow_untyped_defs = false
disallow_incomplete_defs = false
